--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.5",
     "axios": "^1.6.8",
+    "errors": "^0.3.0",
     "express": "^4.19.2",
     "jsdom": "^24.0.0"
   }
