--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "async": "^3.2.5",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "errors": "^0.3.0",
     "express": "^4.19.2",
     "jsdom": "^24.0.0"
